# python-data-analysis-notebooks

./: README.md  pyproject.toml
data/: hills.csv
src/: data-analysis-plotly.ipynb  data-analysis-task-solutions.ipynb  data-analysis-task.ipynb
