[tool.poetry]
name = "python-data-analysis-notebooks"
version = "0.1.0"
description = ""
authors = ["Simon Kirby <s.kirby@exeter.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
ipython = "^8.24.0"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
